feat: 군민증 발급 전 위치 확인 API 추가 (#109)
